src/app/pages/transactions/transactions.scss
@use "../../../styles/variables" as *;

.input-section {
  font-size: 14px;
}

.profile-image {
  width: 32px;

  @media (min-width: $tabletAndUp) {
    width: 40px;
  }
}

.page-link {
  display: flex;
  align-items: center;
  gap: 1rem;
  height: 100%;
  background-color: transparent;
  color: black;

  &:hover {
    color: black;
    cursor: pointer;
  }
}

.page-item {
}

.page-link.active {
  background-color: black !important;
  color: white;
}

.control-text {
  display: none;

  @media (min-width: $tabletAndUp) {
    display: revert;
  }
}

.arrow {
  font-size: 16px;
}

.list-group {
  font-size: 12px;
}

.list-group .amount {
  justify-self: end;
  font-size: 14px;
  font-weight: bold;
}

.list-group-item {
  border-left: none;
  border-right: none;
  padding-block: 18px;
  background-color: transparent;
  color: inherit;

  display: grid;
  grid-template-columns: 4fr 1.3fr 1.3fr 2.5fr;
  align-items: center;

  &:first-child {
    border-top: none;
  }

  &:last-child {
    border-bottom: none;
  }
}

.form-control {
  background-color: transparent;
}

